[MODIFY] 오탈자 수정

--- a/spring-study/1장_오브젝트와_의존관계.md
+++ b/spring-study/1장_오브젝트와_의존관계.md
@@ -59,7 +59,7 @@ UserDao dao = context.getBean("userDao", UserDao.class);
 - 빈을 검색하는 다양한 방법을 제공(타입만으로 검색하거나 특정 애노테이션 설정).
 
 ##### 의존관계 주입(DI)
-`A->B`일 때, A가 B에 의존하고 있지만, B는 A에 의존하지 않는다. B의 변화에 A는 영향을 받는다. A와 B 사이에 인터페이스를 구현하고 인터페이스에 대해 의존관계를 만들면 클래스간의 관계는 느슨해지며 변화에 영향을 더 받는 상태가 된다.
+`A->B`일 때, A가 B에 의존하고 있지만, B는 A에 의존하지 않는다. B의 변화에 A는 영향을 받는다. A와 B 사이에 인터페이스를 구현하고 인터페이스에 대해 의존관계를 만들면 클래스간의 관계는 느슨해지며 변화에 영향을 덜 받는 상태가 된다.
 <br>
 **의존관계 주입**
 설계 시점에 알지 못했던 두 오브젝트의 관계를 맺도록 도와주는 제 3의 존재.<br>
