--- a/it-trend/16_05_12.md
+++ b/it-trend/16_05_12.md
@@ -3,20 +3,19 @@
 #### IT 소식
 - [피부를 터치패드로 활용하는 기술 개발](http://m.news.naver.com/read.nhn?oid=277&aid=0003741775&sid1=105&mode=LSD)
 - [안구 삽입형 스마트 렌즈에 대한 특허를 신청한 구글](http://techneedle.com/archives/26398?utm_source=dlvr.it&utm_medium=twitter)
-- []()
-- []()
-- []()
-- []()
-- []()
-- []()
+- [샌디스크, '아이폰·아이패드' 용량 넓히는 드라이브 출시](http://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=105&oid=003&aid=0007220081)
+- [버튼 한번으로 유기농 착즙 주스를 마실 수 있는 Juicero Press](http://www.venturesquare.net/721752?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+vs-rss+%28VentureSquare%29)
+- [티버즈(Tibuzz). 기업 이벤트, 평판 이슈 관리에 좋은 빅데이터 분석 서비스](http://photohistory.tistory.com/16395)
+- [일반 자전거가 전기자전거로 변신! 스마트휠 '지오오비탈'](http://bizion.mk.co.kr/bbs/board.php?bo_table=mk_idea&wr_id=788)
+- [마이크로소프트 AZURE 한국 내 데이터센터 신설](https://azure.microsoft.com/en-us/blog/microsoft-cloud-accelerates-in-canada-and-expands-to-south-korea/)
 
 
 #### 그 외 볼만한 링크들
 - [프로그래머는 치킨집을 차릴 수 있는가](https://docs.com/user272240/3010)
 - [IT업계가 'Linus Torvalds'에게서 배운 점 (TED강연/한글자막)](https://www.youtube.com/watch?v=1wjkMOjiQeE)
 - [설정 파일의 주석 위치가 일으킨 Apache의 응답 속도 저하](http://d2.naver.com/helloworld/4744401)
-- []()
-- []()
-- []()
-- []()
-- []()
+- [자바스크립트 엔진의 최적화 기법 (1) - JITC, Adaptive Compilation](http://meetup.toast.com/posts/77)
+- [Bootstrap 4 Cheat Sheet](http://hackerthemes.com/bootstrap-cheatsheet/)
+- [자바스크립트 차트 라이브러리 Chart.js 2.0 릴리즈](https://github.com/chartjs/Chart.js/releases/tag/v2.0.0)
+- [HTML <HEAD>에 들어가는 각종 <meta>태그 정리 모음](https://github.com/joshbuchea/HEAD)
+- [넥센 개발자 컨퍼런스 NDC 2016의 강연자료](https://docs.google.com/spreadsheets/d/1OHmrl44-e8rLgFvfOi8aadMMYZvA9VriciFgmRMRjKE/edit#gid=0)
