--- a/it-trend/16_05_12.md
+++ b/it-trend/16_05_12.md
@@ -19,3 +19,4 @@
 - [자바스크립트 차트 라이브러리 Chart.js 2.0 릴리즈](https://github.com/chartjs/Chart.js/releases/tag/v2.0.0)
 - [HTML <HEAD>에 들어가는 각종 <meta>태그 정리 모음](https://github.com/joshbuchea/HEAD)
 - [넥센 개발자 컨퍼런스 NDC 2016의 강연자료](https://docs.google.com/spreadsheets/d/1OHmrl44-e8rLgFvfOi8aadMMYZvA9VriciFgmRMRjKE/edit#gid=0)
+- [엔터프라이즈 환경에서 톰캣 운영 노하우](http://www.slideshare.net/jieunsys/ss-56543446)
