--- a/it-trend/16_05_19.md
+++ b/it-trend/16_05_19.md
@@ -10,5 +10,5 @@
 - [웹서버 견고하게 하기](https://lesstif.gitbooks.io/web-service-hardening/content/web-server.html)
 - [서버 비용을 70%나 줄인 온디맨드 리사이징 이야기](http://engineering.vcnc.co.kr/2016/05/ondemand-image-resizing/)
 - [Logging을 System.out으로 하면 안되는 이유](http://silentsoft.tistory.com/13)
-- - []()
+- [아마존 웹서비스 10분 자습서](https://aws.amazon.com/ko/getting-started/tutorials/)
 - - []()
