--- a/it-trend/16_05_19.md
+++ b/it-trend/16_05_19.md
@@ -1,8 +1,8 @@
 ## 5월 3주차 IT 동향과 이슈
 
 #### IT 소식
-- []()
-- []()
+- [네이버에서 만나보셨나요? 인공지능 채팅 로봇](http://www.bloter.net/archives/256278)
+- [차세대 교통수단 하이퍼루프, 첫 공개 테스트 진행](http://www.bloter.net/archives/256324)
 - [MS, 이색 협업 서비스 '기그잼' 공개](http://www.ciokorea.com/news/29649)
 
 #### 그 외 볼만한 링크들
