--- a/it-trend/16_05_19.md
+++ b/it-trend/16_05_19.md
@@ -13,5 +13,5 @@
 - [개발자는 치킨집을 차릴 수 있는가의 2탄-프로그래머는 커피집을 차릴 수 있는가](https://docs.com/user487534/1199)
 - [웹서버 견고하게 하기](https://lesstif.gitbooks.io/web-service-hardening/content/web-server.html)
 - [서버 비용을 70%나 줄인 온디맨드 리사이징 이야기](http://engineering.vcnc.co.kr/2016/05/ondemand-image-resizing/)
-- [Logging을 System.out으로 하면 안되는 이유](http://silentsoft.tistory.com/13)
+- [Logging을 `System.out`으로 하면 안되는 이유](http://silentsoft.tistory.com/13)
 - [아마존 웹서비스 10분 자습서](https://aws.amazon.com/ko/getting-started/tutorials/)
