--- a/it-trend/16_05_26.md
+++ b/it-trend/16_05_26.md
@@ -1,7 +1,7 @@
 ## 5월 4주차 IT 동향과 이슈
 
 #### IT 소식
-- []()
+- [“튜링 테스트”를 통과할 수 있는 인공지능이 드디어 등장](https://www.facebook.com/etisnu/videos/1218623138172509/)
 - []()
 - []()
 - []()
