--- a/it-trend/16_06_09.md
+++ b/it-trend/16_06_09.md
@@ -5,9 +5,14 @@
 - [“다중창 모드부터 VR까지” 안드로이드 N의 새롭고 주목할만한 기능과 특징](http://www.itworld.co.kr/news/99568)
 - [오픈소스 모바일 DB ‘렘’ 1.0 출시](http://www.bloter.net/archives/257150)
 - [인터넷 광고 차단 소프트웨어, 아시아에서 특히 인기](http://techneedle.com/archives/26777)
+- [“국내 자연어 처리 시장 3,700억 이를 것”](http://www.venturesquare.net/724272)
+- [전기로 나는 전기 비행기 썬 플라이어(Sun flyer)](http://photohistory.tistory.com/16475)
+- [운전자의 움직임을 감지하는 최첨단 카시트 '비밥'](http://bizion.mk.co.kr/bbs/board.php?bo_table=mk_idea&wr_id=804)
 
 #### 그 외 볼만한 링크들
 - [도커를 이용한 웹서비스 무중단 배포하기](http://subicura.com/2016/06/07/zero-downtime-docker-deployment.html)
 - [DevOps – 내일 새벽에는 누가 일어날까](http://blog.nudge.do/devops-내일-새벽에는-누가-일어날까/)
 - [DevOps!! 도대체 왜, 어떻게 할까??](http://www.slideshare.net/chingu94/devops-62712241)
 - [전 위메프 CTO 김요섭님의 DEVOPS관해서](http://bcho.tistory.com/1112)
+- [이클립스 NEON, 6월 22일 릴리즈](https://projects.eclipse.org/releases/neon/details)
+- [파이어폭스 브라우저 핵심 구조 바뀐다](http://www.oss.kr/oss_news/640594)
