--- a/it-trend/16_06_15.md
+++ b/it-trend/16_06_15.md
@@ -1,8 +1,22 @@
 ## 6월 3주차 IT 동향과 이슈
 
 #### IT 소식
-- []()
+- [서버리스(Serverless)가 온다!](http://www.zdnet.co.kr/column/column_view.asp?artice_id=20160614172904)
+- [3D 프린터 활용해 투명 속옷 만든 23살 여대생 화제](http://news.mk.co.kr/newsRead.php?year=2016&no=428190)
+- [네이버가 1년간 육성해 온 5개의 스타트업 데모데이](http://platum.kr/archives/61462)
+- [쑥쑥 크는 에듀테크](http://news.joins.com/article/20176693)
+- [인프라웨어, 웹에디터 ‘폴라리스 에디터’ 출시](https://www.bloter.net/archives/257861)
+- [블루투스 SIG, 4배 넓고 2배 빠른 차세대 블루투스 16일 공식 발표](http://www.kbench.com/?q=node/164036)
+- [증강현실 특화 스마트폰](https://www.bloter.net/archives/257943)
+- [몸에 넣는 태양전지 개발…피부 안에 들어가 전력공급](http://www.etnews.com/20160516000283)
+- [운전자의 움직임을 감지하는 최첨단 카시트 '비밥'](http://bizion.mk.co.kr/bbs/board.php?bo_table=mk_idea&wr_id=804)
+
 
 #### 그 외 볼만한 링크들
-- [자바 stringbuffer와 stringbuilder 벤치마크. 결론은 stringbuilder에 초기크기를 충분히 주는게 제일 빠름. 아니면 그냥 문자열 더하기](http://alblue.bandlem.com/2016/04/jmh-stringbuffer-stringbuilder.html?utm_content=buffer87ee0&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer)
-- [자바9에서 String내부 문자 저장이 바뀔 예정. Char배열대신 byte배열쓰고 플래그를 둬 내용 따라 라틴1과 UTF-16사이에서 선택. 실 시스템에서 힙 사용이 눈에 띄게 줄고 gc도 줄어들듯](https://bugs.openjdk.java.net/browse/JDK-8054307)
+- [Apple 2016 WWDC 정리](http://www.clien.net/cs2/bbs/board.php?bo_table=cm_iphonien&wr_id=3354901)
+- [Spring Framework 4.3 Release](https://jira.spring.io/browse/SPR/fixforversion/15453/?selectedTab=com.atlassian.jira.plugins.jira-development-integration-plugin%3Arelease-report-tabpanel)
+- [도대체 뭐가 RESTful 이라는건가?](http://www.chidoo.me/index.php/2016/06/03/what-is-restful/)
+- [웹서버 트래픽 폭주 대비하기 - (1) Apache + Tomcat 설정값 튜닝 사례](http://blog.naver.com/PostView.nhn?blogId=tmondev&logNo=220731906490&redirect=Dlog&widgetTypeCall=true)
+- [자바 stringbuffer와 stringbuilder 벤치마크](http://alblue.bandlem.com/2016/04/jmh-stringbuffer-stringbuilder.html?utm_content=buffer87ee0&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer) : 결론은 stringbuilder에 초기크기를 충분히 주는게 제일 빠름. 아니면 그냥 문자열 더하기
+- [자바9에서 변경 될 String 클래스의 동작](https://bugs.openjdk.java.net/browse/JDK-8054307) : Char배열대신 byte배열쓰고 플래그를 둬 내용 따라 라틴1과 UTF-16사이에서 선택. 실 시스템에서 힙 사용이 눈에 띄게 줄고 gc도 줄어들듯
+- [이해하기 쉬운 픽셀 밀도](https://brunch.co.kr/@ultra0034/23)
