--- a/setup/개발환경세팅(16.06.12기준Ver).md
+++ b/setup/개발환경세팅(16.06.12기준Ver).md
@@ -24,10 +24,10 @@
 	- [SQLManagementStudio for MS-SQL](https://www.microsoft.com/ko-kr/download/details.aspx?id=29062)
 
 5. 브라우저
-	- [Google Chrome](https://www.google.co.kr/chrome/browser/desktop/)
-	- [Google Chrome Canary](https://www.google.co.kr/chrome/browser/canary.html)
-	- [Firefox Developer Edition](https://www.mozilla.org/ko/firefox/developer/)
-	- [Opera Developer](http://www.opera.com/ko/developer)
+	- [Google Chrome](https://www.google.co.kr/chrome/browser/desktop/) ( --incognito)
+	- [Google Chrome Canary](https://www.google.co.kr/chrome/browser/canary.html) ( --incognito)
+	- [Firefox Developer Edition](https://www.mozilla.org/ko/firefox/developer/)(-private)
+	- [Opera Developer](http://www.opera.com/ko/developer) (-private)
 
 6. 추가 설치
 	- [Maven](https://maven.apache.org/download.cgi)
