GDG2016 발표영상 링크

--- a/seminar/2016-11-05-gdg-devfest-2016.md
+++ b/seminar/2016-11-05-gdg-devfest-2016.md
@@ -7,9 +7,12 @@
 ## 참여섹션
 
 - 완전 기초부터 다뤄보는 Machine Learning / TensorFlow 101 - 권순선님
+  - 발표영상 [https://www.youtube.com/watch?v=4y7yQi6eOqo&index=1&list=PLF_OUznA3RTRKL6ya3tmChL4yR9rNLMP6](https://www.youtube.com/watch?v=4y7yQi6eOqo&index=1&list=PLF_OUznA3RTRKL6ya3tmChL4yR9rNLMP6)
 - ES 2016 101 - 맹기완님
+  - 발표영상 [https://www.youtube.com/watch?v=CY_2mFxQwzc&list=PLF_OUznA3RTRKL6ya3tmChL4yR9rNLMP6&index=2](https://www.youtube.com/watch?v=CY_2mFxQwzc&list=PLF_OUznA3RTRKL6ya3tmChL4yR9rNLMP6&index=2)
 - WANTED 이력서 클리닉
 - AMP는 어떻게 웹 페이지의 성능을 높일 수 있나? - 김태훈님
+  - [https://www.youtube.com/watch?v=e6slMlFgdCQ&index=4&list=PLF_OUznA3RTT8rQB3SjEw9f3fGDnqMS9y](https://www.youtube.com/watch?v=e6slMlFgdCQ&index=4&list=PLF_OUznA3RTT8rQB3SjEw9f3fGDnqMS9y)
 
 ## Machine Learning & TensorFlow 101 / 권순선님
 
