fix: 연관글 링크변경

--- a/seminar/2018/2018-10-18-real-tdd.md
+++ b/seminar/2018/2018-10-18-real-tdd.md
@@ -86,7 +86,7 @@
     - 요구사항을 대충 분석하는게 아니라 그림을 그리고 기획자와 같이 토론 하며 분석함.
 - "소프트웨어로 사용자에게 어떤 가치를 전달할 것인가"에 대한 진지한 고민.
 - 유저스토리를 Jira 등록한 후, 코드 설계를 고민하고 구체적인 기술에 관련된 티켓들을 세세히 하위 테스크로 등록함.
-- 세미나 끝나고 집에 오는 길에 마침 RSS 받은 글이 [Product Manager 관점에서 바라 본 TDD](https://getpocket.com/a/read/2174455870)인데, 'User Story에 적힌 첫 번째 스펙(Acceptance Criteria)을 충족하기 위한 테스트 코드를 작성' 한다는 내용이 있음.
+- 세미나 끝나고 집에 오는 길에 마침 RSS 받은 글이 [Product Manager 관점에서 바라 본 TDD](https://medium.com/@sryu99/product-manager-%EA%B4%80%EC%A0%90%EC%97%90%EC%84%9C-%EB%B0%94%EB%9D%BC-%EB%B3%B8-tdd-3ae25512c5d7)인데, 'User Story에 적힌 첫 번째 스펙(Acceptance Criteria)을 충족하기 위한 테스트 코드를 작성' 한다는 내용이 있음.
 - Jira 티켓에 테스트 케이스들을  함. 즉, 요건을 만족하는 테스트케이스들을 미리 고민.
     - [TDD에 대한 오해와 진실 TDD 이야기](https://book.naver.com/bookdb/book_detail.nhn?bid=7422964) 책 4장에서 Top-Down Approach TDD에 대해 얘기함.
     - 테스트케이스들을 Top-Down으로 방향을 잡고, Bottom-Up으로 세부 구현.
