fix: 어색한 문장 개선

--- a/seminar/2018/2018-10-18-real-tdd.md
+++ b/seminar/2018/2018-10-18-real-tdd.md
@@ -15,7 +15,7 @@
 - (적고 보니 위 세 가지는 전 동료분이 자주 사용하시던 말인 듯)
 - 사용자에게 가치를 전달하는 소프트웨어
 
-이제까지 단위테스트, TDD를 하려고 했던 이유는 많지만 그 중 가장 큰 건 내 코드에 대한 불신 때문이 컸는데,  앞으로는 위 목적을 이루기 위해 좀 더 노력 해야겠다는 생각을 함. 기술이든 방법론이든 모두 “사용자에게 가치를 전달하는 소프트웨어를 만든다”는 목적을 이루기 위한 수단 임을 다시 상기함.
+이제까지 단위테스트, TDD를 하려고 했던 이유는 많지만 그 중 내 코드에 대한 불신 때문이 가장 컸는데, 앞으로는 위 목적을 이루기 위해 좀 더 노력 해야겠다는 생각을 함. 기술이든 방법론이든 모두 “사용자에게 가치를 전달하는 소프트웨어를 만든다”는 목적을 이루기 위한 수단 임을 다시 상기함.
 
 
 
