--- a/til/2019q2.md
+++ b/til/2019q2.md
@@ -10,7 +10,7 @@
 
 
 
-## OFFSET 방식 페이징 방식의 문제
+## OFFSET 방식 페이징의 문제
 
 - [jOOQ Blog, Why Most Programmers Get Pagination Wrong](https://blog.jooq.org/2016/08/10/why-most-programmers-get-pagination-wrong/)
 - [hackerwins blog  - DB를 이용한 Pagination](https://hackerwins.github.io/2019-05-24/db-pagination)
