til: jmh for java microbenchmark

--- a/til/2019q2.md
+++ b/til/2019q2.md
@@ -1,5 +1,4 @@
 # 20190601
-
 ## Semantic Commit Messages
 
 - https://seesparkbox.com/foundry/semantic_commit_messages
@@ -20,3 +19,17 @@ OFFSET 방식 페이징의 성능 문제가 잘 정리되어 있음. 하지만 j
 - [Slack API - Paginating through collections](https://api.slack.com/docs/pagination#cursors)
 - [Twitter Developer - Pagination](https://developer.twitter.com/en/docs/ads/general/guides/pagination.html)
 - https://www.google.com/search?q=cursor+based+pagination&newwindow=1&ei=hSrzXMuHAoLQ8wWUub_gDQ&start=60&sa=N&ved=0ahUKEwiL3rHc1sniAhUC6LwKHZTcD9wQ8tMDCM0B&biw=1420&bih=948
+
+# 20190605
+## JMH
+https://github.com/my-scratchpad/java-microbenchmark
+자바 성능 측정을 위한 마이크로벤치마크 도구 jmh 를 살펴봄.
+
+> 마이크로벤치마크에서 가장 조심해야 할 부분은, 아무 의미가 없더라도 항상 어떤 수치가 만들어진다는 사실입니다. 뭔가 측정은 하는데 그 실체는 확실치 않습니다. - 자바 최적화. 벤저민 J. 에번스 외 2명 저. 이일웅 역. 한빛미디어. 2019
+
+위 문구가 굉장히 인상적임. 전체 코드 중 작은 자바 코드 한 조각의 성능을 정확히 측정하기는 매우 미묘하고 어려움. [자바 최적화] 책에서는 가능하면 마이크로벤치마크를 하지 않되 꼭 필요하다면 유스케이스를 정확히 파악할 것을 강조. 주로 마이크로벤치마킹을 하는 유스케이스는 다음과 같음.
+
+- 사용 범위가 넓은 범용 라이브러리 코드 개발
+- OpenJDK 또는 다른 자바 플랫폼 구현체 개발
+- 지연에 극도로 민감함 코드 개발
+
