til: domain model and persistence model

--- a/til/2019q2.md
+++ b/til/2019q2.md
@@ -33,3 +33,31 @@ https://github.com/my-scratchpad/java-microbenchmark
 - OpenJDK 또는 다른 자바 플랫폼 구현체 개발
 - 지연에 극도로 민감함 코드 개발
 
+# 20190606
+## Domain Model And Persistence Model
+최근 팀을 옮겼고 새로운 기능을 개발하며 신규 도메인 등장. 그에 따라 엔티티를 정의했는데 팀 내 리뷰 과정에서 생각이 많이 달라 합의할 수 있는 수준의 모델이 만들어지기까지 많은 의견이 오고 감. 나중에 알고 보니 엔티티를 도메인 모델 관점으로 보냐 영속성 모델 관점으로 보냐에 따라 의견이 많이 달라진 것.
+
+```java
+@Entity
+@Getter
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
+@ToString
+@Table(
+        indexes = {
+                @Index(name = "foo_bar")
+        }
+)
+@Audited
+@AuditOverride(forClass=AbstractAuditable.class)
+public class Entity extends AbstractAuditable {
+}
+```
+
+자바, 스프링, 하이버네이트 조합에서 엔티티를 만들다 보면 DDD, Hexagonal Architecture에서 이야기하는 우리 코드의 중심에서 가장 순수한 것과는 이질감이 느껴짐. 하지만 도메인 모델과 영속성 모델을 분리하면  느끼던 이질감이 모두 해결될 듯.
+
+> “Are the benefits of pure DDD worth the cost in the speed of development?”  
+
+반면, Stackoverflow 에 관련 질문 답변 중 위 문장이 인상적. 맵핑 과정을 한단계 더 거친다는 것이 해보지 않은 일이라 부담스럽기는 함. 하지만 비즈니스가 계속되는 동안 도메인이 그 중심에 있는 것이라면 그런 수고로움을 감수할 만 하다고 생각. 팀 전원의 합의 하에 도메인 모델과 영속성 모델이 분리 된 설계를 해보고 싶음.
+
+- [Stackoverflow - DDD Persistence Model and Domain Model](https://stackoverflow.com/a/14042539)
+- [Enterprise Craftsmanship - Having the domain model separated from the persistence model](https://enterprisecraftsmanship.com/2016/04/05/having-the-domain-model-separate-from-the-persistence-model/)
