til: backends for frontends

--- a/til/2019q2.md
+++ b/til/2019q2.md
@@ -61,3 +61,17 @@ public class Entity extends AbstractAuditable {
 
 - [Stackoverflow - DDD Persistence Model and Domain Model](https://stackoverflow.com/a/14042539)
 - [Enterprise Craftsmanship - Having the domain model separated from the persistence model](https://enterprisecraftsmanship.com/2016/04/05/having-the-domain-model-separate-from-the-persistence-model/)
+
+
+# 20190612
+## Backends For Frontends
+API Gateway는 Reverse Proxy 패턴의 특화 된 형태. 단순 라우팅 외에 부가적인 역할도 가능. 주로 클라이언트-마이크로 서비스 간의 통신에 관해 다음과 같은 문제를 해결하기 위해 사용.
+- 마이크로 서비스들의 결합 (aggregation)
+- 너무 많은 네트워크 왕복
+- 인증 및 권한 문제 등
+
+다음 두개 링크에서는 사용자 UI와 관련하여 API Gateway 가 좀 더 특화 된 형태인 BFF 를 소개.
+- [API gateway pattern](https://microservices.io/patterns/apigateway.html)
+- [Sam Newman - Backends For Frontends](https://samnewman.io/patterns/architectural/bff/#general)
+
+BFF 는 마이크로 서버들의 응답을 결합하여 UI 에 특화 된 모델 형태로 반환. 따라서 클라이언트 별로 BFF 가 존재할 수 있음. 예컨대, 웹용 BFF, IOS용 BFF, Android 용 BFF 등.
