til: no response url

--- a/til/2019q3.md
+++ b/til/2019q3.md
@@ -20,3 +20,9 @@ nginx 로 오는 요청 및 응답의 특정 조건(응답헤더에 expired 가 
 - Vary 헤더필드에 대해서는 카카오 기술 블로그 [분산 웹 캐시 (Wcache)의 개선과정 - Part 2](http://tech.kakao.com/2017/10/23/wcache-2/) 에서 다음과 같이 설명하고 있음.
 
 > HTTP 헤더 중에는 ‘Vary’라는 항목이 있습니다. 동일한 URL에 대해 요청을 하더라도 요청한 사용자의 특징(User Agent, Accept Encoding, Origin 등등)에 따라 서로 다른 응답을 해 주기 위해서 존재하는 헤더입니다. 따라서 웹 캐시에서는 vary 헤더를 확인하고 해당 헤더에서 명시하는 조건에 따라 동일 URL이라 하더라도 다른 종류의 컨텐츠를 캐싱하고, 제공해야 합니다.
+
+
+# 20190815
+## 응답 없는 서버
+- `http://www.google.com:81/`
+- 위 URL 로 요청을 보내면 응답이 없음. 타임아웃을 급하게 테스트 해야 하는 상황에서 사용할만함.
