til: 코드스피츠 84 오브젝트2 - 6회차

--- a/til/2019q4.md
+++ b/til/2019q4.md
@@ -1,3 +1,14 @@
+# 20191013
+[코드스피츠 84 오브젝트2 - 6회차 Youtube](https://youtu.be/biJS1Ze8UMw) 를 시청함.
+- 우리가 만드는 시스템의 목적을 명확히 이해해야 함. 시스템 목적의 변화는 아키텍처의 변경을 유발.
+- 이 말인 즉 목적, 기능/비기능적 요구사항들이 아키텍처를 변하게 하는데 문제는 사용자도 정확한 요구사항을 모름. 시스템이 릴리즈 되고 난 후 실제 프로덕트를 봐야 피드백을 줄 수 있음.
+- 따라서 우리는 CI/CD 를 통해서 사용자에게 프로덕트를 지속적으로 딜리버리 해야 함. 단순히 빌드 성공 여부를 확인하기 위해 CI/CD 를 하는 것은 아님. (둘은 다른 개념이긴 하지만..)
+- 하지만 현실적으로 실무에서는 수 많은 이해 관계자와 절차, 규정이 존재 함. 또한, 기능 하나 배포의 파급 효과가 큼. 너무 많은 사용자에게 영향을 주기 때문에 두려움.
+- 하지만 이건 조금 다른 이야기. 일단 CI/CD 할 수 있어야 하고 그 후 A/B 테스트를 하고 데이터를 측정하여 기능을 발전시켜갈 것인가 F/O 할 것인가를 결정.
+- 이를 위해 프로덕트를 만들기 시작할 때 우리가 해야 하는 건 레이어링을 어떻게 해야 하고, 세부 알고리즘부터 작게 작게 구현하며 테스트 하는 게 아니라 모든 등장 인물이(외부 DB, API 등)  포함되어 실제 서버 위에서 한 사이클이 완전히 동작하는 골격 코드를 작성. 이를 사용자에게 전달하고 피드백을 얻음. 그리고 아키텍처를 개선.
+- 굉장히 이상적이지만 이렇게 하기 힘들게 만드는건 어떤것들일까?
+
+
 # 20191003
 ## The Law of Leaky Abstractions
 - [the-law-of-leaky-abstractions](https://www.joelonsoftware.com/2002/11/11/the-law-of-leaky-abstractions)
