til: Java, Call By Reference 에 대한 오해

--- a/til/2019q4.md
+++ b/til/2019q4.md
@@ -1,3 +1,8 @@
+# 20191109
+## Java, Call By Reference 에 대한 오해
+조금 오해하고 있던 Call By Reference 에 대해 간단히 [정리](https://namkyujin.com/2019-11-09/java-call-by-reference/).
+
+
 # 20191013
 [코드스피츠 84 오브젝트2 - 6회차 Youtube](https://youtu.be/biJS1Ze8UMw) 를 시청함.
 - 우리가 만드는 시스템의 목적을 명확히 이해해야 함. 시스템 목적의 변화는 아키텍처의 변경을 유발.
