til: 리액티브 선언문

--- a/til/2020q1.md
+++ b/til/2020q1.md
@@ -1,3 +1,15 @@
+# 2020315
+## 왜 리액티브인가?
+- [리액티브 선언문](https://www.reactivemanifesto.org/ko)
+
+예측 가능한 상황에서 시스템은 안정적으로 운영할 수 있지만 예측을 빗나가는 순간 시스템은 무너짐. 예컨대 소규모 스타트업 서비스가 방송에 노출되거나 어떤 이벤트로 급잡스레 부하가 증가하면 이는 예상을 벗어난 것.
+예상 밖 상황에 대응하지 못하면 고객에게 신뢰를 잃고 우리 서비스를 떠나게 만듬. 그럼 어떻게 대응할 것인가?  변화에 대응할 수 있는 애플리케이션을 만들기 위한 방법 중 하나가 리액티브한 아키텍처.
+
+![리액티브 선언문](https://www.reactivemanifesto.org/images/reactive-traits-ko.svg)
+느슨하게 결합하기 위해 메세지 기반으로 동작하며 유연성과 탄력성을 확보해야 함. 이를 통해 이루고자 하는 핵심 가치는 응답성. 리액티브 선언문에서 응답성은 가능한 즉각적으로 응답하는 것이라고 정의함. [릴리즈잇](https://github.com/iamkyu/TIL/blob/master/books/summary/release-it.md) 에서는 이렇게 얘기 했음.
+
+> 어떤 경우이든지, 그냥 답을 갖고 돌아오라. (중략) 나를 기다리게 만든다면 여러분이 작업을 끝내기 전에 나는 여러분의 사이트를 떠날지도 모른다.
+
 # 20200130
 ## 부패하는 소프트웨어
 
