til: Redis - ZSet 자료구조

--- a/til/2020q2.md
+++ b/til/2020q2.md
@@ -1,3 +1,15 @@
+# 20200509
+## Redis - ZSet 자료구조
+레디스에서 ZSet 이라 불리는 Sorted Set 내부 구조에 대해 살펴봄.
+- 데이터를 두가지 자료구조로 저장. ZIP LIST 구조를 사용하다 다음 조건 중 하나라도 만족하면  SKIP LIST 변환.
+  - 멤버 수가 128개 초과. 
+  - 값 길이가 64바이트(각 멤버의 데이터 크기를 뜻하는 듯?) 초과
+- ZIP LIST 는 메모리 절약에 최적화. (http://redisgate.kr/redis/configuration/internal_zset_ziplist.php)
+- SKIP LIST 는 삽입 연산에 최적화. 또한, 여러 개의 포인터를 가지고 있어 특정 노드의 탐색도 효과적임. (http://redisgate.kr/redis/configuration/internal_skiplist.php)
+  - ZIP LIST 가 삽입 연산 성능이 떨어지는 이유는 메모리 절약을 위해 포인터를 사용하지 않음. 할당 받은 메모리를 필요한만큼 늘려가며 저장하는데 이 때문에 삽입, 삭제시 `realloc()`과 `memmove()`를 수행하기 때문임.
+- redis.conf 에서 `zset-max-ziplist-entries`, `zset-max-ziplist-value` 는 조정 가능함. 즉, 성능과 메모리 중 더 중요한 것에 따라 자료 구조를 선택할 수 있음. 
+
+
 # 20200505
 ## SpringApplicationEvent
 
