--- a/til/2020q4.md
+++ b/til/2020q4.md
@@ -1,6 +1,43 @@
-# 20201007
-## AMQP 0-9-1 Protocol
-- [AMQP 0-9-1 Model Explained](https://www.rabbitmq.com/tutorials/amqp-concepts.html)
+## 42주차
+
+### 팟캐스트
+
+- [이쓔스, 스타트업 털어주마: #텍톡 "아마존은 왜 손바닥으로 결제하는 아마존 원(Amazon One) 개발했을까"](http://www.podbbang.com/ch/1771866?e=23811219)
+- [데이터홀릭: Ep(79) 데이터뉴스_카카오도 네이버도 짓는 데이터센터 이야기](http://www.podbbang.com/ch/1771386?e=23809074)
+
+--- 
+
+### 책
+
+> [도메인 주도 설계 철저 입문 | 나루세 마사노부 저 | 심효섭 역 | 위키북스 | 2020](https://book.naver.com/bookdb/book_detail.nhn?bid=16778491)
+
+DDD 관련 새로 출간 된 책이라 가볍게 전체적으로 훑어봄. 에릭 에반스, 반버논의 DDD 보다는 훨씬 쉽게 쓰였고, 최범균님의 DDD 스타트는 코드를 중심으로 설명했다면 이 책은 코드는 적지만 이론을 정말 친절히 씀. 편견인지 모르지만 일본에서 출간되는 기술 서적은 정말 읽기 쉽고 친절함. 
+
+DDD 입문자가 반버논의 도메인주도설계핵심(얇은 버전)과 함께 보면 좋을 것 같음.
+
+--- 
+
+### 문서
+
+> [AMQP 0-9-1 Model Explained](https://www.rabbitmq.com/tutorials/amqp-concepts.html)
 
 기존에는 메시징 기반 프로그래밍시 AWS에서 제공하는 SNS, SQS 를 통해 점대점, 팬아웃 등의 시나리오를 대응했음. 이제 RabbitMQ 를 사용하기 앞서 AMQP 프로토콜에 대해 살펴봄.
 
+Advanced Message Queuing Protocol 의 약자. 클라이언트 응용 프로그램이 메시징 미들웨어 중개자가 통신할 수 있게 하는 (네트워크 기반의) 메시징 프로토콜. RabbitMQ 는 AMQP 0.9.1 버전에 맞춰 구현 됨. 
+
+--- 
+
+### 블로그
+
+> [Advanced Spring Data JPA - Specifications and Querydsl](https://spring.io/blog/2011/04/26/advanced-spring-data-jpa-specifications-and-querydsl/)
+
+필요에 의해 JpaSpecificationExecutor 인터페이스를 확장 구현하기 전에 Specifications 의 등장 배경에 대해 조금 리서치.
+
+Spring Data JPA 는 데이터 접근 계층을 쉽게 구현할 수 있게 해줌.  미리 약속 된 규칙에 맞춰 인터페이스의 시그니처만 만들면 쿼리는 내부적으로 자동 생성 (Query Creation). 반면, 이 규칙으로 인해 쿼리 메서드는 계속해서 증가하고 좀 더 복잡한 쿼리를 만들어내기 위한 유연성은 떨어지는 단점이 있음.
+
+이를 극복하기 위해 객체지향 쿼리 빌더라고도 하는 Criteria 를 사용할 수도. JPQL을 자바 코드를 작성함으로써 컴파일 타임에 오류를 잡을 수 있어 안전. 하지만 Criteria 로 작성된 쿼리는 가독성이 떨어지고 재사용이 어려움.
+
+이에 이 글은 몇가지 대안을 제시해줌.
+
+- Specifications: 에릭에반스의 DDD 에서 소개 된 개념을 바탕으로 Specification 인터페이스를 통해 재사용 가능한 Predicate 를 정의 가능하게 해줌. 복잡한  Predicate 를 and, or 등 다양하게 조합하여 Specification 에 담고, JpaSpecificationExecutor 에는 Specification 를 인자로 받는 기본적인 인터페이스가 정의되어 있음. 예컨대 findAll(Specification spec) 같은 것들.
+- Querydsl: Querydsl 은 별개의 오픈소스 프로젝트로 Criteria 와 마찬가지로 별도의 메타 객체를 (Q클래스) 생성하여 사용하지만 Criteria 보다 더 다양한 API 를 제공하고 JPA, 하이버네이트, JDBC 등 다양하게 지원.
