--- a/til/2020q4.md
+++ b/til/2020q4.md
@@ -11,7 +11,7 @@
 
 > [도메인 주도 설계 철저 입문 | 나루세 마사노부 저 | 심효섭 역 | 위키북스 | 2020](https://book.naver.com/bookdb/book_detail.nhn?bid=16778491)
 
-DDD 관련 새로 출간 된 책이라 가볍게 전체적으로 훑어봄. 에릭 에반스, 반버논의 DDD 보다는 훨씬 쉽게 쓰였고, 최범균님의 DDD 스타트는 코드를 중심으로 설명했다면 이 책은 코드는 적지만 이론을 정말 친절히 씀. 편견인지 모르지만 일본에서 출간되는 기술 서적은 정말 읽기 쉽고 친절함. 
+DDD 관련 새로 출간 된 책이라 가볍게 전체적으로 훑어봄. [에릭 에반스](https://github.com/iamkyu/TIL/blob/master/books/summary/ddd.md), [반버논](https://github.com/iamkyu/TIL/blob/master/books/summary/ddd-implementing.md)의 DDD 보다는 훨씬 쉽게 쓰였고, [최범균님의 DDD 스타트](https://github.com/iamkyu/TIL/blob/master/books/summary/ddd-start.md)는 코드를 중심으로 설명했다면 이 책은 코드는 적지만 이론을 정말 친절히 씀. 편견인지 모르지만 일본에서 출간되는 기술 서적은 정말 읽기 쉽고 친절함. 
 
 DDD 입문자가 반버논의 도메인주도설계핵심(얇은 버전)과 함께 보면 좋을 것 같음.
 
